--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
     "firebase": "^11.8.1",
+    "lucide-react-native": "^0.516.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
