gitignore added env

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=swim-pace-245aa.firebasestorage.app
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=684258084504
 EXPO_PUBLIC_FIREBASE_APP_ID=1:684258084504:web:5a1d793b370077a53c72ed
 EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-5TSF5QPT9Z
+COACH_SECRET_CODE=JOINSWIMPACE
